# PayHere

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  table.DDL
account_books/: admin.py  models.py  serializers.py  urls.py  views.py
account_books/migrations/: 0001_initial.py
account_books/tests/: base.py  test_access_share_link.py  test_add_memo.py  test_delete_memo.py  test_duplicate_memo.py  test_generate_share_link.py  test_get_memo.py  test_update_memo.py
accounts/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
accounts/tests/: test_login.py  test_logout.py
config/: permissions.py  settings.py  urls.py
users/: admin.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/tests/: test_logout.py  test_register.py
